--- a/engine/Makefile.am
+++ b/engine/Makefile.am
@@ -7,9 +7,9 @@ EXTRA_DIST =  config-parser.rl
 lib_LTLIBRARIES = libironbee.la
 libironbee_la_SOURCES = engine.c provider.c logger.c parser.c data.c tfn.c \
                         config.c config-parser.c config-parser.h core.c \
-						matcher.c filter.c \
-						config-parser.h ironbee_private.h \
-						$(top_builddir)/lua/ironbee.h
+                        matcher.c filter.c rule_engine.c \
+                        config-parser.h ironbee_private.h \
+                        $(top_builddir)/lua/ironbee.h
 libironbee_la_LIBADD = $(top_builddir)/util/libibutil.la
 
 if DARWIN
